# small-graph-s-bandwidths

./: .gitignore  CITATION.bib  Project.toml  README.md  pyproject.toml  setup.py
benchmark/: job1_summary.txt  job2_summary.txt  job3_summary.txt
data/: small_graph_s_bandwidths.db
jobs/: job1.sh  job2.sh  job3.sh  setup_pyenv.sh
src/: main.sh  main_pt1.jl  main_pt2.py
src/helpers/: sql_mapping.py  utils.jl  utils.pyx
